--- a/eBado/Views/Shared/_Layout.cshtml
+++ b/eBado/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-
+    
 </head>
 <body>
     <!-- Top panel -->
@@ -32,11 +32,11 @@
             <div class="collapse navbar-collapse" id="top-navbar-1">
                 <ul class="nav navbar-nav navbar-right">
 
-                    <li class="active">
-                        <a href="#"><i class="fa fa-camera"></i><br>bazár</a>
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" ? "active" : "")">
+                        <a href="@Url.Action("Index", "Home")"><i class="fa fa-camera"></i><br>bazár</a>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-comments"></i><br>dopyt</a>
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index2" ? "active" : "")">
+                        <a href="@Url.Action("Index2", "Home")"><i class="fa fa-comments"></i><br>dopyt</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-tasks"></i><br>faq</a>
@@ -49,16 +49,13 @@
         </div>
     </nav>
 
-    <div class="container body-content">
+    <div class="container">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        <div class="e-footer">
+            <p>&copy; @DateTime.Now.Year - eBado Application</p>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
