--- a/eBado/Assets/css/style.css
+++ b/eBado/Assets/css/style.css
@@ -53,7 +53,7 @@ h3, h4 { line-height: 20px; }
 	text-align: center;
 }
 .top-panel-img {
-	float:center;
+	display: inline-block;
 	order: 1;
 	width: 100%;
 	height: 80px;
@@ -62,7 +62,7 @@ h3, h4 { line-height: 20px; }
 	border-style: solid;
 }
 .top-panel-drop {
-	float:center;	
+	display: inline-block;
 	order: 2;
 	width: 100%;	
 	height: 30px;
@@ -221,6 +221,107 @@ nav-account ul ul li a:hover {
   text-align: center;
 }
 
+/***** Custom Heplers *****/
+.e-margin-bottom {
+    margin-bottom: 10px;
+}
+
+.e-text-right {
+    text-align: right !important;
+}
+
+.e-pull-left {
+    text-align: left !important;
+}
+
+.e-form
+{
+  width: 300px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.e-form-textbox {
+    width: 100%;
+    float:left;
+    margin-bottom: 10px;
+}
+
+
+/****Popup****/
+.popup-form {
+    margin-left: 50px;
+    margin-top: 55px;
+}
+.account-box
+{
+    border: 2px solid rgba(153, 153, 153, 0.75);
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    z-index: 3;
+    font-size: 13px !important;
+    font-family: "Helvetica Neue" ,Helvetica,Arial,sans-serif;
+    background-color: #ffffff;
+    padding: 20px;
+}
+
+.logo
+{
+    width: 138px;
+    height: 30px;
+    text-align: center;
+    margin: 10px 0px 27px 40px;
+    background-position: 0px -4px;
+    position: relative;
+}
+
+.forgotLnk
+{
+    margin-top: 10px;
+    display: block;
+}
+
+.login-bg
+{
+    background-color: #00b6ff;
+    color: #fff;
+}
+.or-box
+{
+    position: relative;
+    border-top: 1px solid #dfdfdf;
+    padding-top: 20px;
+    margin-top:20px;
+}
+.or
+{
+    color: #666666;
+    background-color: #ffffff;
+    position: absolute;
+    text-align: center;
+    top: -8px;
+    width: 40px;
+    left: 90px;
+}
+.account-box .btn:hover
+{
+    color: #fff;
+}
+.btn-facebook
+{
+    background-color: #3F639E;
+    color: #fff;
+    font-weight:bold;
+}
+.btn-google
+{
+    background-color: #454545;
+    color: #fff;
+    font-weight:bold;
+}
 
 
 
