--- a/eBado/Views/Shared/_Layout.cshtml
+++ b/eBado/Views/Shared/_Layout.cshtml
@@ -50,13 +50,14 @@
         </div>
     </nav>
 
-    <div class="container">
+   
+    <div class="e-wrapper">
         @RenderBody()
+        <div class="e-pull-left"></div>
         <div class="e-footer">
             <p>&copy; @DateTime.Now.Year - eBado Application</p>
         </div>
     </div>
-
 
 </body>
 </html>
