--- a/eBado/Views/Account/RegisterNewAccount.cshtml
+++ b/eBado/Views/Account/RegisterNewAccount.cshtml
@@ -1,4 +1,4 @@
-﻿@model eBado.Models.Account.RegisterFormModel
+﻿@model Web.eBado.Models.Account.RegisterFormModel
 
 
 @using (Html.BeginForm()) 
@@ -6,28 +6,75 @@
     @Html.AntiForgeryToken()
 
     <div class="container">
-       <h2 style="text-align:left">Registracia</h2>
-        <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#home">Zadkladny ucet</a></li>
-            <li><a data-toggle="tab" href="#menu1">Praca na dohodu</a></li>
-            <li><a data-toggle="tab" href="#menu2">Zivnostnik</a></li>
-            <li><a data-toggle="tab" href="#menu3">Firemny ucet</a></li>
+        <h2 class="col-md-offset-3" style="text-align:left">Registracia</h2>
+        <ul class="nav nav-pills col-md-offset-3">
+            <li class="active"><a data-toggle="pill" href="#account1">Zakladny ucet</a></li>
+            <li><a data-toggle="pill" href="#account2">Praca na dohodu</a></li>
+            <li><a data-toggle="pill" href="#account3">Zivnostik</a></li>
+            <li><a data-toggle="pill" href="#account4">Firemny ucet</a></li>
         </ul>
 
-        <div class="tab-content">
-            <div id="home" class="tab-pane fade in active">
-                <h3>HOME</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tab-content col-md-offset-3">
+            <div id="account1" class="tab-pane fade in active">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+
+                            <form class="form-horizontal" action="" method="POST">
+                                <fieldset>
+                                    <div class="control-group">
+                                        <label class="control-label" for="username">Username</label>
+                                        <div class="controls">
+                                            <input type="text" id="username" name="username" placeholder="" class="form-control input-lg">
+                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="control-group">
+                                        <label class="control-label" for="email">E-mail</label>
+                                        <div class="controls">
+                                            <input type="email" id="email" name="email" placeholder="" class="form-control input-lg">
+                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="control-group">
+                                        <label class="control-label" for="password">Password</label>
+                                        <div class="controls">
+                                            <input type="password" id="password" name="password" placeholder="" class="form-control input-lg">
+                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="control-group">
+                                        <label class="control-label" for="password_confirm">Password (Confirm)</label>
+                                        <div class="controls">
+                                            <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="form-control input-lg">
+                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="control-group">
+                                        <!-- Button -->
+                                        <div class="controls">
+                                            <button class="form-btn">REGISTROVAT</button>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="menu1" class="tab-pane fade">
-                <h3>Menu 1</h3>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div id="account2" class="tab-pane fade">
+                <div style="height:800px; color:aqua"></div>
             </div>
-            <div id="menu2" class="tab-pane fade">
+            <div id="account3" class="tab-pane fade">
                 <h3>Menu 2</h3>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
             </div>
-            <div id="menu3" class="tab-pane fade">
+            <div id="account4" class="tab-pane fade">
                 <h3>Menu 3</h3>
                 <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
             </div>
