--- a/eBado/Views/Shared/_LoginPartial.cshtml
+++ b/eBado/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@model eBado.Models.Account.LoginModel
+@model Web.eBado.Models.Account.LoginModel
 @if (Request.IsAuthenticated)
 {
     <nav-account>
