--- a/eBado/Views/Shared/_Layout.cshtml
+++ b/eBado/Views/Shared/_Layout.cshtml
@@ -51,13 +51,22 @@
     </nav>
 
    
-    <div class="e-wrapper">
+    @*<div class="e-wrapper">
         @RenderBody()
         <div class="e-pull-left"></div>
         <div class="e-footer">
             <p>&copy; @DateTime.Now.Year - eBado Application</p>
         </div>
+    </div>*@
+
+    <div id="wrap">
+        <div class="container">@RenderBody()</div>
     </div>
+    <footer id="footer">
+        <div class="container">
+            <p>&copy; @DateTime.Now.Year - eBado Application</p>
+        </div>
+    </footer>
 
 </body>
 </html>
