commit before validate

--- a/eBado/Assets/css/button.css
+++ b/eBado/Assets/css/button.css
@@ -20,7 +20,7 @@ float:right;
 /***** Form Button*****/
 
 .form-btn {
-float:right;
+float:none;
 background-color:#fff;
   border: 2px #00b6ff solid;
   font-family: Arial;
