--- a/eBado/Views/Account/RegisterNewAccount.cshtml
+++ b/eBado/Views/Account/RegisterNewAccount.cshtml
@@ -4,79 +4,42 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    <h2 class="form-center" style="text-align:left">Registracia</h2>
-        <ul class="nav nav-pills">
-            <li class="active"><a data-toggle="pill" href="#account1">Zakladny ucet</a></li>
-            <li><a data-toggle="pill" href="#account2">Praca na dohodu</a></li>
-            <li><a data-toggle="pill" href="#account3">Zivnostik</a></li>
-            <li><a data-toggle="pill" href="#account4">Firemny ucet</a></li>
-        </ul>
-        <div class="container"  >
-            <div class="tab-content col-md-12">
-                <div id="account1" class="tab-pane fade in active">
-                    <div class="form-center">
-                        <div class="col-md-11">
-
-                            <form class="form-horizontal" action="" method="POST">
-                                <fieldset style="margin-left:20px">
-                                    <div class="control-group">
-                                        <label class="control-label" for="username">Username</label>
-                                        <div class="controls">
-                                            <input type="text" id="username" name="username" placeholder="" class="form-control input-lg">
-                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
-                                        </div>
+    <div class="container">
+            <div class="col-md-2"></div>
+        <div class="row">
+                <div class="col-md-8">
+                    <!-- Nav tabs --><div class="card">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active"><a href="#basic" aria-controls="home" style="font-size:15px;" role="tab" data-toggle="tab">ZAKLADNY UCET</a></li>
+                            <li role="presentation"><a href="#part-time" aria-controls="profile" style="font-size:15px;" role="tab" data-toggle="tab">PRACA NA DOHODU</a></li>
+                            <li role="presentation"><a href="#self-employed" aria-controls="messages" style="font-size:15px;" role="tab" data-toggle="tab">ZIVNOSTNIK</a></li>
+                            <li role="presentation"><a href="#company" aria-controls="settings" style="font-size:15px;" role="tab" data-toggle="tab">FIREMNY UCET</a></li>
+                        </ul>
+                        <!-- Tab panes -->
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane active" id="basic">
+                                <form>
+                                    <div class="form-group">
+                                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control txt-lg", @data_val = "true", @data_val_required = "Billing Address is required", @placeholder = "Email" } })
+                                        @*<input required type="email" class="form-control txt-lg" placeholder="Email" id="email">*@
+                                        <label class="label-form" for="email">error message for textbox</label>
                                     </div>
-
-                                    <div class="control-group">
-                                        <label class="control-label" for="email">E-mail</label>
-                                        <div class="controls">
-                                            <input type="email" id="email" name="email" placeholder="" class="form-control input-lg">
-                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
-                                        </div>
+                                    <div class="form-group">
+                                        <input required type="password" class="form-control txt-lg" placeholder="Username" id="pwd">
+                                        <label class="label-form" for="pwd">error message for textbox</label>
                                     </div>
-
-                                    <div class="control-group">
-                                        <label class="control-label" for="password">Password</label>
-                                        <div class="controls">
-                                            <input type="password" id="password" name="password" placeholder="" class="form-control input-lg">
-                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="control-group">
-                                        <label class="control-label" for="password_confirm">Password (Confirm)</label>
-                                        <div class="controls">
-                                            <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="form-control input-lg">
-                                            <p class="validation-block">validation error message: "get a fuck out!"</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="control-group">
-                                        <!-- Button -->
-                                        <div class="controls">
-                                            <button class="form-btn">REGISTROVAT</button>
-                                        </div>
-                                    </div>
-                                </fieldset>
-                            </form>
+                                    @Html.Hidden("AccountType", "Basic")
+                                    <button type="submit" class="form-btn">REGISTROVAT</button>
+                                </form>
+                            </div>
+                            <div role="tabpanel" class="tab-pane" id="part-time">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
+                            <div role="tabpanel" class="tab-pane" id="self-employed">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+                            <div role="tabpanel" class="tab-pane" id="company">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passage..</div>
                         </div>
                     </div>
                 </div>
-                <div id="account2" class="tab-pane fade">
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-
-                </div>
-                <div id="account3" class="tab-pane fade">
-                    <h3>Menu 2</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-                </div>
-                <div id="account4" class="tab-pane fade">
-                    <h3>Menu 3</h3>
-                    <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                </div>
             </div>
         </div>
-}
+        }
 
 
