--- a/eBado/Assets/css/style.css
+++ b/eBado/Assets/css/style.css
@@ -426,44 +426,28 @@ nav-account {
 }
 
 /***** Register Form *****/
-.control-group {
-    text-align: left;
-    margin-top: 5px;
+.nav-tabs { border-bottom: 2px solid #DDD; }
+    .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
+    .nav-tabs > li > a { border: none; color: #666; }
+        .nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
+        .nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
+    .nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after { transform: scale(1); }
+.tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }
+.tab-pane { padding: 15px 0; }
+.tab-content{padding:20px}
+
+.card {background: #FFF none repeat scroll 0% 0%; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); margin-bottom: 30px; }
+
+.form-group{
+    text-align:left;
+    max-width:600px;
+    margin-top: -10px;
+}
+.txt-lg{
+    height:40px;
 }
 
-.validation-block {
-    color: red;
-}
-
-.form-center {
-    float: none;
-    display: inline-block;
-    text-align: center;
-    margin-left: 20px;
-    min-width:620px;
-}
-
-@media screen and (max-width: 820px) {
-    .form-center {
-        margin-left: -20px;
-        overflow-x: hidden;
-    }
-}
-
-@media screen and (max-width: 620px) {
-    .form-center {
-        margin-left: -20px;
-        min-width:unset;
-        overflow-x: hidden;
-    }
-}
-
-.nav-pills > li {
-    float: none;
-    display: inline-block;
-    zoom: 1;
-}
-
-.nav-pills {
-    text-align: center;
+.label-form{
+    margin:0 auto;
+    color:red;
 }
