--- a/eBado/Views/Shared/_Layout.cshtml
+++ b/eBado/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
     </div>*@
 
     <div id="wrap">
-        <div class="container">@RenderBody()</div>
+        @RenderBody()
     </div>
     <footer id="footer">
         <div class="container">
