--- a/eBado/Assets/css/style.css
+++ b/eBado/Assets/css/style.css
@@ -429,8 +429,8 @@ nav-account {
 .nav-tabs { border-bottom: 2px solid #DDD; }
     .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
     .nav-tabs > li > a { border: none; color: #666; }
-        .nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
-        .nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
+        .nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #00b6ff !important; background: transparent; }
+        .nav-tabs > li > a::after { content: ""; background: #00b6ff; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
     .nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after { transform: scale(1); }
 .tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }
 .tab-pane { padding: 15px 0; }
@@ -450,4 +450,16 @@ nav-account {
 .label-form{
     margin:0 auto;
     color:red;
+}
+.reg-font{
+    border-style: solid;
+    border-color: #00b6ff;
+    border-width: 1px 0px 1px 0px;
+    color: #9b9b9b;
+    font-size:20px;
+    font-weight:300;
+    margin:0 auto;
+}
+hr.transparent{
+    border: 1px solid #ffffff;
 }
