--- a/eBado/Assets/css/style.css
+++ b/eBado/Assets/css/style.css
@@ -452,13 +452,14 @@ nav-account {
     color:red;
 }
 .reg-font{
-    border-style: solid;
+    /*border-style: solid;
     border-color: #00b6ff;
     border-width: 1px 0px 1px 0px;
-    color: #9b9b9b;
+    color: #9b9b9b;*/
     font-size:20px;
     font-weight:300;
     margin:0 auto;
+    text-align:left;
 }
 hr.transparent{
     border: 1px solid #ffffff;
